src/objects/DOAApprovalRequest__c.object
<CustomObject>
    <fields>
        <fullName>GeoOtherTimeApp__c</fullName>
        <label>Geography Other Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeoPresidentApprovedBy__c</fullName>
        <label>Geography President Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoPresidentApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Operations
Level: Geography</inlineHelpText>
        <label>Geography President</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Geo President)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsGeoPres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeoPresidentCheckApp__c</fullName>
        <label>Geography President Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoPresidentTimeApp__c</fullName>
        <label>Geography President Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeographyApprovalRAG__c</fullName>
        <formula>IF(ISPICKVAL( GeographyApprovalStatus__c, &quot;&quot;),null,
IF(ISPICKVAL( GeographyApprovalStatus__c, &quot;Completed&quot;),&quot;Completed&quot;
,&quot;Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geography Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeographyApprovalStatus__c</fullName>
        <label>Geography Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeographyApprovalsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geography</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeographyChiefCounselApprovedBy__c</fullName>
        <label>Geography Chief Counsel Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeographyChiefCounselApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography Chief Counsel</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsGeoChiefCounsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeographyChiefCounselCheckApp__c</fullName>
        <label>Geography Chief Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeographyChiefCounselTimeApp__c</fullName>
        <label>Geography Chief Counsel Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeographyDaysInApproval__c</fullName>
        <formula>IF( ISPICKVAL(GeographyApprovalStatus__c,&quot;&quot;), null,
IF(ISPICKVAL(GeographyApprovalStatus__c,&quot;Approved&quot;),  GeographyTimeApproved__c -  GeographyTimeSubmittedforApproval__c, 
Now() - GeographyTimeSubmittedforApproval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geography Days In Approval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeographyTimeApproved__c</fullName>
        <label>Geography Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GeographyTimeSubmittedforApproval__c</fullName>
        <label>Geography Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupApprovalRag__c</fullName>
        <formula>IF(ISPICKVAL( GroupApprovalStatus__c, &quot;&quot;),null,
IF(ISPICKVAL( GroupApprovalStatus__c, &quot;Completed&quot;),&quot;Completed&quot;
,&quot;Pending&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupApprovalStatus__c</fullName>
        <label>Group Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupApprovalsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupChiefCounselApprovedBy__c</fullName>
        <label>Group Chief Counsel Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupChiefCounselApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Group
Level: Group</inlineHelpText>
        <label>Group Chief Counsel</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Group Chief Counsel)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsGrpChiefCounsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupChiefCounselCheckApp__c</fullName>
        <label>Group Chief Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupChiefCounselTimeApp__c</fullName>
        <label>Group Chief Counsel Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupChiefExecutiveApprovedBy__c</fullName>
        <label>Group Chief Executive Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupChiefExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Group
Level: Group</inlineHelpText>
        <label>Group Chief Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Group Chief Executive)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsGroupChiefExec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupChiefExecutiveCheckApp__c</fullName>
        <label>Group Chief Executive Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupChiefExecutiveTimeApp__c</fullName>
        <label>Group Chief Executive Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupChiefFinancialOfficerApprovedBy__c</fullName>
        <label>Group Chief Fin. Officer Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupChiefFinancialOfficerApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Group
Level: Group</inlineHelpText>
        <label>Group Chief Financial Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Group Chief Chief Financial Officer)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsGroupCFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupChiefFinancialOfficerCheckApp__c</fullName>
        <label>Group Chief Financial Officer Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupChiefFinancialOfficerTimeApp__c</fullName>
        <label>Group Chief Fin. Officer Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupCountofApproved__c</fullName>
        <label>Group Count of Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupCountofApprovers__c</fullName>
        <label>Group Count of Approvers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupDaysinApproval__c</fullName>
        <formula>IF( ISPICKVAL(GroupApprovalStatus__c,&quot;&quot;), null,
IF(ISPICKVAL(GroupApprovalStatus__c,&quot;Approved&quot;),  GroupTimeApproved__c -  GroupTimeSubmittedforApproval__c, 
Now() - GroupTimeSubmittedforApproval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Days in Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroupOtherApprovedBy__c</fullName>
        <label>Group Other Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupOtherApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Group
Level: Group</inlineHelpText>
        <label>Group Other</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Other)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsGrpOther</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupOtherCheckApp__c</fullName>
        <label>Group Other Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GroupOtherTimeApp__c</fullName>
        <label>Group Other Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupTimeApproved__c</fullName>
        <label>Group Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GroupTimeSubmittedforApproval__c</fullName>
        <label>Group Time Submitted for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HRDirectorGeographyDirApprovedBy__c</fullName>
        <label>HR Director - Geo Director Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRDirectorGeographyDirApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Director - Geo Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsHRDirectoryGeo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HRDirectorGeographyDirCheckApp__c</fullName>
        <label>HR Director - Geo Director Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRDirectorGeographyDirTimeApp__c</fullName>
        <label>HR Director - Geo Director Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadEnvironmentCounselApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Other
Level: Geography</inlineHelpText>
        <label>Lead Environment Counsel</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Lead Environment Counsel)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsLeadEnvCounsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadEnvironmentCounselCheckApp__c</fullName>
        <label>Lead Environment Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadEnvironmentCounselTimeApp__c</fullName>
        <label>Lead Environment Counsel Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LinktoDoAManager__c</fullName>
        <formula>SUBSTITUTE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;.&apos;, $Api.Partner_Server_URL_260)),&quot;.&quot;, &quot;--c&quot;)+MID($Api.Partner_Server_URL_260, FIND( &apos;.&apos;, $Api.Partner_Server_URL_260),
FIND( &apos;my.salesforce&apos;, $Api.Partner_Server_URL_260)-FIND( &apos;.&apos;, $Api.Partner_Server_URL_260))+&quot;visual.force.com/apex/ECO_DOA_ApprovalRequest?projectID=&quot;&amp;Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to DoA Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetServicesRevenue__c</fullName>
        <formula>Project__r.NetServicesRevenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Services Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ODCCost__c</fullName>
        <formula>Project__r.ODCsCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ODC Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Project__r.OpportunityName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <label>Opportunity Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DOA Approval Requests</relationshipLabel>
        <relationshipName>DOAApprovalRequestsOpp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OracleProjectNumber__c</fullName>
        <label>Oracle Project Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCheckApp__c</fullName>
        <label>Other Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherCommentsNeeded__c</fullName>
        <label>Other Comments Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherTimeApp__c</fullName>
        <label>Other Time Approver</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PLManager__c</fullName>
        <formula>Project__r.PnLManager__r.FirstName&amp;&quot; &quot;&amp;Project__r.PnLManager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P&amp;L Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This participant will receive workflow related communication for DOA Approval Requests</inlineHelpText>
        <label>Participant 1</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Participant 1)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsParticipant1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This participant will receive workflow related communication for DOA Approval Requests</inlineHelpText>
        <label>Participant 2</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Participant 2)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsParticipant2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This participant will receive workflow related communication for DOA Approval Requests</inlineHelpText>
        <label>Participant 3</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Participant 3)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsParticipant3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Initial Prospect Identity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Pursuit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Proposal Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Project Award</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PresidentCFOApprovedBy__c</fullName>
        <label>President CFO Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PresidentCFOApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>President/CFO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsPresCFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PresidentCFOCheckApp__c</fullName>
        <label>President/CFO Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PresidentCFOTimeApp__c</fullName>
        <label>President/CFO Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectApproach__c</fullName>
        <label>Project Approach</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectDescription__c</fullName>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectManagerApprovedBy__c</fullName>
        <label>Project Manager Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManagerApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Operations
Level: All</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Project Manager)</relationshipLabel>
        <relationshipName>DOAApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManagerCheckApp__c</fullName>
        <label>Project Manager Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectManagerTimeApp__c</fullName>
        <label>Project Manager Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <formula>Project__r.pse__Project_Manager__r.pse__Salesforce_User__r.FirstName&amp;&quot; &quot;&amp; Project__r.pse__Project_Manager__r.pse__Salesforce_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNameSubject__c</fullName>
        <label>Project Name/Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <description>Displays the Oracle project number if available else this field will display the Ecosystem reference number.</description>
        <formula>IF(NOT(ISBLANK(Project__r.OracleProjectnumber__c )),Project__r.OracleProjectnumber__c , Project__r.EcoSystemReferenceNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Oracle project number if available else this field will display the Ecosystem reference number.</inlineHelpText>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectScope__c</fullName>
        <label>Project Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>DOA Approval Requests</relationshipLabel>
        <relationshipName>DOAApprovalRequestsProject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalDue__c</fullName>
        <label>Proposal Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFPIssueDate__c</fullName>
        <formula>Project__r.RFPIssueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonforRequest__c</fullName>
        <label>Reason for Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegBLExecutiveApprovedBy__c</fullName>
        <label>Region/BL Executive Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegBLExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Operations
Level: Region</inlineHelpText>
        <label>Region/BL Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Reg/BL Executive)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsRegBLExec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegBLExecutiveCheckApp__c</fullName>
        <label>Region/BL Executive Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegBLExecutiveTimeApp__c</fullName>
        <label>Region/BL Executive Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RegionChiefCounselApprovedBy__c</fullName>
        <label>Region Chief Counsel Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionChiefCounselApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Legal
Level: Geography</inlineHelpText>
        <label>Region Chief Counsel</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Region Chief Counsel)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsRegChiefCounsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionChiefCounselCheckApp__c</fullName>
        <label>Region Chief Counsel Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionChiefCounselTimeApp__c</fullName>
        <label>Region Chief Counsel Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RegionPicklist__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>DOA Approval Requests</relationshipLabel>
        <relationshipName>DOAApprovalRequestsRegion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestTitle__c</fullName>
        <label>Request Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project (Eco) - Work at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project (Eco) - Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project (Eco) - Revenue at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project (Non-Eco) - Work at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project (Non-Eco) - Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project (Non-Eco) - Revenue at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DOAApprovalRequestsRequestor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmitAECOMHubForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit AECOM Hub For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitDCSHubforApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit DCS Hub for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitEnterpriseforApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Enterprise for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitGeographyforApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Geography for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitGroupforApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Group for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubsCost__c</fullName>
        <formula>Project__r.SubsCost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subs Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_DoA_Approver_Page__c</fullName>
        <formula>SUBSTITUTE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;.&apos;, $Api.Partner_Server_URL_260)),&quot;.&quot;, &quot;--c&quot;)+MID($Api.Partner_Server_URL_260, FIND( &apos;.&apos;, $Api.Partner_Server_URL_260),FIND( &apos;my.salesforce&apos;, $Api.Partner_Server_URL_260)-FIND( &apos;.&apos;, $Api.Partner_Server_URL_260))+&quot;visual.force.com/&quot;</formula>
        <label>Test DoA Approver Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreasuryApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Function: Group
Level: Other</inlineHelpText>
        <label>Treasury</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>DOA Approval Requests (Treasury)</relationshipLabel>
        <relationshipName>DOAApprovalRequestsTreasury</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TreasuryCheckApp__c</fullName>
        <label>Treasury Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TreasuryTimeApp__c</fullName>
        <label>Treasury Time Approved</label>
        <type>DateTime</type>
    </fields>
    <label>DOA Approval Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DOAApprovalQueue_DOAApprovalRequest</fullName>
        <columns>NAME</columns>
        <columns>DateRequired__c</columns>
        <columns>ProjectNumber__c</columns>
        <columns>GeographyApprovalRAG__c</columns>
        <columns>GroupApprovalRag__c</columns>
        <columns>EnterpriseApprovalRag__c</columns>
        <columns>DCSApprovalStatusRAG__c</columns>
        <columns>AECOMHubApprovalRAG__c</columns>
        <filterScope>Queue</filterScope>
        <label>DOA Approval Queue</label>
        <language>en_US</language>
        <queue>DOAApprovalQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DOA-{0}</displayFormat>
        <label>DOA Request For Approval Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOA Approval Requests</pluralLabel>
    <recordTypes>
        <fullName>DOACreate</fullName>
        <active>true</active>
        <label>Ecosystem Project (Create)</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOAQueueEntry</fullName>
        <active>true</active>
        <label>Ecosystem (Submitted)</label>
    </recordTypes>
</CustomObject>